src2/objects/NES_Firmware__c.object
<CustomObject>
    <fields>
        <fullName>NES_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NES_New_Firmware__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Firmware</label>
        <referenceTo>NES_Firmware__c</referenceTo>
        <relationshipLabel>Firmware</relationshipLabel>
        <relationshipName>NES_Firmwares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NES_Version__c</fullName>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Firmware</label>
    <nameField>
        <label>Firmware Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firmware</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>